c/examples/writing-a-c-compiler-tests/tests/chapter_7/valid/use_in_inner_scope.c
int main(void)
{
    int x;
    {
        x = 3;
    }
    {
        return x;
    }
}