c/examples/writing-a-c-compiler-tests/tests/chapter_7/invalid_semantics/use_before_declare.c
int main(void) {
    int a;
    {
        b = 10;
    }
    int b;
    return b;
}